src/objects/Product_To_Category_Check__mdt.object
<CustomObject>
    <fields>
        <fullName>Check_Box_Field__c</fullName>
        <label>Check Box Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Group__c</fullName>
        <label>Option Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Product To Category Check</label>
    <pluralLabel>Product To Category Checks</pluralLabel>
</CustomObject>